dropdown menu one commit

--- a/index.html
+++ b/index.html
@@ -30,8 +30,117 @@
     <!-- left_nav -->
     <nav class="left_section">
       <!-- links_list -->
-      <ul class="left_links_list">
-        <li><a href="#">Features</a></li>
+      <ul class="left_links_list position_relative">
+        <li>
+
+          <a href="#">Features</a>
+
+          <div class="dropdown_menu one">
+
+            <!-- account_section -->
+            <div class="account_section">
+
+              <div class="list_heading">
+
+                <div class="circle">
+                  <i class="fas fa-home"></i>
+                </div>
+
+                <h3>ACCOUNT</h3>
+
+              </div>
+
+              <ul>
+
+                <li><a href="#">Budget & Analytics</a></li>
+                <li><a href="#">Cards</a></li>
+                <li><a href="#">Junior Account</a></li>
+                <li><a href="#">Pockets</a></li>
+
+              </ul>
+
+            </div>
+            <!-- /account_section -->
+
+            <!-- wealth_section -->
+            <div class="wealth_section">
+
+              <div class="list_heading">
+
+                <div class="circle">
+                  <i class="far fa-chart-bar"></i>
+                </div>
+
+                <h3>WEALTH</h3>
+
+              </div>
+
+              <ul>
+
+                <li><a href="#">Crypto</a></li>
+                <li><a href="#">Commodities</a></li>
+                <li><a href="#">Vaults</a></li>
+                <li><a href="#">Savings Vaults</a></li>
+
+              </ul>
+
+            </div>
+            <!-- /wealth_section -->
+
+            <!-- payments_section -->
+            <div class="payments_section">
+
+              <div class="list_heading">
+
+                <div class="circle">
+                  <i class="fas fa-exchange-alt"></i>
+                </div>
+
+                <h3>PAYMENTS</h3>
+
+              </div>
+
+              <ul>
+
+                <li><a href="#">Money Transfers</a></li>
+                <li><a href="#">Group Bills</a></li>
+                <li><a href="#">Subscriptions</a></li>
+
+              </ul>
+
+            </div>
+            <!-- /payments_section -->
+
+            <!-- extras_section -->
+            <div class="extras_section">
+
+              <div class="list_heading">
+
+                <div class="circle">
+                  <i class="fas fa-star"></i>
+                </div>
+
+                <h3>EXTRAS</h3>
+
+              </div>
+
+              <ul>
+
+                <li><a href="#">Donations</a></li>
+                <li><a href="#">Overseas Insurance</a></li>
+                <li><a href="#">Device Insurance</a></li>
+                <li><a href="#">Safety</a></li>
+                <li><a href="#">Rewards</a></li>
+
+              </ul>
+
+            </div>
+            <!-- /extras_section -->
+
+          </div>
+
+        </li>
+
         <li><a href="#">Plans</a></li>
         <li><a href="#">About Us</a></li>
       </ul>
