dropdown menu 2 commit

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <nav class="left_section">
       <!-- links_list -->
       <ul class="left_links_list position_relative">
+
+        <!-- Features -->
         <li>
 
           <a href="#">Features</a>
@@ -140,8 +142,37 @@
           </div>
 
         </li>
+        <!-- /Features -->
 
-        <li><a href="#">Plans</a></li>
+        <!-- Plans -->
+        <li>
+
+          <a href="#">Plans</a>
+
+          <div class="dropdown_menu_two">
+
+            <div>
+
+              <ul>
+
+                <li><a href="#">Standars</a></li>
+
+                <li><a href="#">Plus</a></li>
+
+                <li><a href="#">Premium</a></li>
+
+                <li><a href="#">Metal</a></li>
+
+                <li><a href="#">Compare Plans</a></li>
+
+              </ul>
+
+            </div>
+
+          </div>
+
+        </li>
+        <!-- /Plans -->
         <li><a href="#">About Us</a></li>
       </ul>
       <!-- /links_list -->
