dropdown menu 3 commit

--- a/index.html
+++ b/index.html
@@ -173,7 +173,46 @@
 
         </li>
         <!-- /Plans -->
-        <li><a href="#">About Us</a></li>
+
+        <!-- About Us -->
+        <li>
+
+          <a href="#">About Us</a>
+
+          <div class="dropdown_menu_three">
+
+            <div>
+
+              <ul>
+
+                <li><a href="#">Abuot Us</a></li>
+
+                <li><a href="#">Blog</a></li>
+
+                <li><a href="#">Leadership</a></li>
+
+                <li><a href="#">Newsroom</a></li>
+
+                <li><a href="#">Affiliate</a></li>
+
+                <li><a href="#">Influencers</a></li>
+
+                <li><a href="#">Careers</a></li>
+
+                <li><a href="#">Culture</a></li>
+
+                <li><a href="#">Diversity & Inclusion</a></li>
+
+                <li><a href="#">Contact</a></li>
+
+              </ul>
+
+            </div>
+
+          </div>
+
+        </li>
+        <!-- /About Us -->
       </ul>
       <!-- /links_list -->
 
