dropdown menu 4 commit

--- a/index.html
+++ b/index.html
@@ -213,6 +213,37 @@
 
         </li>
         <!-- /About Us -->
+
+        <!-- Help -->
+        <li>
+
+          <a href="#">Help</a>
+
+          <div class="dropdown_menu_four">
+
+            <div>
+
+              <ul>
+
+                <li><a href="#">Help Center</a></li>
+
+                <li><a href="#">Community</a></li>
+
+                <li><a href="#">Security</a></li>
+
+                <li><a href="#">System Status</a></li>
+
+                <li><a href="#">Developer APIs</a></li>
+
+              </ul>
+
+            </div>
+
+          </div>
+
+        </li>
+        <!-- /Help -->
+
       </ul>
       <!-- /links_list -->
 
