--- a/index.html
+++ b/index.html
@@ -15,131 +15,48 @@
 <body>
 
   <header>
-    <!-- right_nav -->
-    <nav class="rigth_section">
-      <!-- links_list -->
-      <a href="#"><img src="img/logo_revolut_cut.PNG" alt=""></a>
-      <ul class="right_links_list">
-        <li><a href="#">Personal</a></li>
-        <li><a href="#">Business</a></li>
-      </ul>
-      <!-- /links_list -->
-    </nav>
-    <!-- /right_nav -->
-
     <!-- left_nav -->
-    <nav class="left_section">
-      <!-- links_list -->
-      <ul class="left_links_list position_relative">
+    <nav class="left_nav_section">
 
+      <ul class="left_nav_ul">
+
+        <li>
+          <a href="#">
+            <img src="img/logo_revolut_cut.PNG" alt="logo">
+          </a>
+        </li>
+
+        <li>
+          <a href="#">Personal</a>
+        </li>
+
+        <li>
+          <a href="#">Business</a>
+        </li>
+
+      </ul>
+
+    </nav>
+    <!-- /left_nav -->
+
+    <!-- right_nav -->
+    <nav class="right_nav_section">
+
+      <ul class="right_nav_ul">
         <!-- Features -->
         <li>
 
           <a href="#">Features</a>
 
-          <div class="dropdown_menu one">
+          <ul class="dropdown_menu">
 
-            <!-- account_section -->
-            <div class="account_section">
+            <li><a href="#">Budget</a></li>
+            <li><a href="#">Cards</a></li>
+            <li><a href="#">Junior Account</a></li>
+            <li><a href="#">Pockets</a></li>
+            <li><a href="#"></a></li>
 
-              <div class="list_heading">
-
-                <div class="circle">
-                  <i class="fas fa-home"></i>
-                </div>
-
-                <h3>ACCOUNT</h3>
-
-              </div>
-
-              <ul>
-
-                <li><a href="#">Budget & Analytics</a></li>
-                <li><a href="#">Cards</a></li>
-                <li><a href="#">Junior Account</a></li>
-                <li><a href="#">Pockets</a></li>
-
-              </ul>
-
-            </div>
-            <!-- /account_section -->
-
-            <!-- wealth_section -->
-            <div class="wealth_section">
-
-              <div class="list_heading">
-
-                <div class="circle">
-                  <i class="far fa-chart-bar"></i>
-                </div>
-
-                <h3>WEALTH</h3>
-
-              </div>
-
-              <ul>
-
-                <li><a href="#">Crypto</a></li>
-                <li><a href="#">Commodities</a></li>
-                <li><a href="#">Vaults</a></li>
-                <li><a href="#">Savings Vaults</a></li>
-
-              </ul>
-
-            </div>
-            <!-- /wealth_section -->
-
-            <!-- payments_section -->
-            <div class="payments_section">
-
-              <div class="list_heading">
-
-                <div class="circle">
-                  <i class="fas fa-exchange-alt"></i>
-                </div>
-
-                <h3>PAYMENTS</h3>
-
-              </div>
-
-              <ul>
-
-                <li><a href="#">Money Transfers</a></li>
-                <li><a href="#">Group Bills</a></li>
-                <li><a href="#">Subscriptions</a></li>
-
-              </ul>
-
-            </div>
-            <!-- /payments_section -->
-
-            <!-- extras_section -->
-            <div class="extras_section">
-
-              <div class="list_heading">
-
-                <div class="circle">
-                  <i class="fas fa-star"></i>
-                </div>
-
-                <h3>EXTRAS</h3>
-
-              </div>
-
-              <ul>
-
-                <li><a href="#">Donations</a></li>
-                <li><a href="#">Overseas Insurance</a></li>
-                <li><a href="#">Device Insurance</a></li>
-                <li><a href="#">Safety</a></li>
-                <li><a href="#">Rewards</a></li>
-
-              </ul>
-
-            </div>
-            <!-- /extras_section -->
-
-          </div>
+          </ul>
 
         </li>
         <!-- /Features -->
@@ -149,122 +66,75 @@
 
           <a href="#">Plans</a>
 
-          <div class="dropdown_menu_two">
+          <ul class="dropdown_menu">
 
-            <div>
+            <li><a href="#">Standard</a></li>
+            <li><a href="#">Plus</a></li>
+            <li><a href="#">Premium</a></li>
+            <li><a href="#">Metal</a></li>
+            <li><a href="#">Compare Plans</a></li>
 
-              <ul>
-
-                <li><a href="#">Standars</a></li>
-
-                <li><a href="#">Plus</a></li>
-
-                <li><a href="#">Premium</a></li>
-
-                <li><a href="#">Metal</a></li>
-
-                <li><a href="#">Compare Plans</a></li>
-
-              </ul>
-
-            </div>
-
-          </div>
+          </ul>
 
         </li>
         <!-- /Plans -->
 
-        <!-- About Us -->
+        <!-- Abuot Us -->
         <li>
 
-          <a href="#">About Us</a>
+          <a href="#">Abuot Us</a>
 
-          <div class="dropdown_menu_three">
+          <ul class="dropdown_menu">
 
-            <div>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Leadership</a></li>
+            <li><a href="#">Newsroom</a></li>
+            <li><a href="#">Affiliate</a></li>
+            <li><a href="#">Influencer</a></li>
+            <li><a href="#">Career</a></li>
 
-              <ul>
-
-                <li><a href="#">Abuot Us</a></li>
-
-                <li><a href="#">Blog</a></li>
-
-                <li><a href="#">Leadership</a></li>
-
-                <li><a href="#">Newsroom</a></li>
-
-                <li><a href="#">Affiliate</a></li>
-
-                <li><a href="#">Influencers</a></li>
-
-                <li><a href="#">Careers</a></li>
-
-                <li><a href="#">Culture</a></li>
-
-                <li><a href="#">Diversity & Inclusion</a></li>
-
-                <li><a href="#">Contact</a></li>
-
-              </ul>
-
-            </div>
-
-          </div>
+          </ul>
 
         </li>
-        <!-- /About Us -->
+        <!-- /Abuot Us -->
 
         <!-- Help -->
         <li>
 
           <a href="#">Help</a>
 
-          <div class="dropdown_menu_four">
+          <ul class="dropdown_menu">
 
-            <div>
+            <li><a href="#">Help Center</a></li>
+            <li><a href="#">Community</a></li>
+            <li><a href="#">Security</a></li>
+            <li><a href="#">System Status</a></li>
+            <li><a href="#">Developer APIs</a></li>
 
-              <ul>
-
-                <li><a href="#">Help Center</a></li>
-
-                <li><a href="#">Community</a></li>
-
-                <li><a href="#">Security</a></li>
-
-                <li><a href="#">System Status</a></li>
-
-                <li><a href="#">Developer APIs</a></li>
-
-              </ul>
-
-            </div>
-
-          </div>
+          </ul>
 
         </li>
         <!-- /Help -->
 
-      </ul>
-      <!-- /links_list -->
+        <!-- grey_button -->
+        <li>
+          <a class="button grey" href="#">Sign In</a>
+        </li>
+        <!-- /grey_button -->
 
-      <!-- buttons -->
-      <button class="left_button" type="button" name="button">Sign In</button>
-      <button class="rigth_button" type="button" name="button">Get the App</button>
-      <!-- /buttons -->
+        <!-- black_button -->
+        <li>
+          <a class="button black" href="#">Get the App</a>
+        </li>
+        <!-- /black_button -->
+
+      </ul>
+
     </nav>
-    <!-- /left_nav -->
+    <!-- /right_nav -->
 
   </header>
-
-  <main>
-
-  </main>
-
-  <footer>
-
-  </footer>
-
-
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="js/script.js" charset="utf-8"></script>
